--- a/spring-security-saml/pom.xml
+++ b/spring-security-saml/pom.xml
@@ -174,6 +174,15 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <pomFileName>spring-security-saml/pom.xml</pomFileName>
+                    <pushChanges>false</pushChanges>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
