--- a/spring-security-saml/pom.xml
+++ b/spring-security-saml/pom.xml
@@ -31,10 +31,10 @@
     </licenses>
 
     <scm>
-        <connection>scm:git@git.springsource.org:~sannies/spring-security/sannies-se-security.git</connection>
-        <developerConnection>scm:git@git.springsource.org:~sannies/spring-security/sannies-se-security.git
+        <connection>scm:git:git@github.com:sannies/se-security-saml.git</connection>
+        <developerConnection>scm:git:git@github.com:sannies/se-security-saml.git
         </developerConnection>
-        <url>http://git.springsource.org/~sannies/spring-security/sannies-se-security</url>
+        <url>https://github.com/sannies/se-security-saml</url>
     </scm>
 
     <developers>
@@ -179,8 +179,8 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.1</version>
                 <configuration>
-                    <pomFileName>spring-security-saml/pom.xml</pomFileName>
                     <pushChanges>false</pushChanges>
+                    <localCheckout>true</localCheckout>
                 </configuration>
             </plugin>
         </plugins>
