--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.security.extensions</groupId>
     <artifactId>spring-security-saml2-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-CL-RC1-SNAPSHOT</version>
+    <version>1.0.0-CL-RC1</version>
     <name>Spring Security SAML v2</name>
 
     <description>Spring Security Extensions SAML v2</description>
