--- a/saml2-sample/pom.xml
+++ b/saml2-sample/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <artifactId>spring-security-saml2-parent</artifactId>
         <groupId>org.springframework.security.extensions</groupId>
-        <version>1.0.0-CL-RC1-SNAPSHOT</version>
+        <version>1.0.0-CL-RC1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
