--- a/saml2-core/pom.xml
+++ b/saml2-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>spring-security-saml2-parent</artifactId>
         <groupId>org.springframework.security.extensions</groupId>
-        <version>1.0.0-CL-RC1</version>
+        <version>1.0.1-CL-RC1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
